<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/backgroundcar"
                android:contentDescription="@string/signup" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/email"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:drawablePadding="8dp"
                android:background="@drawable/cusrtom_edittext"
                tools:ignore="Autofill" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/username"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:background="@drawable/cusrtom_edittext"
                android:inputType="text"
                android:autofillHints="username" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/password"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/baseline_lock_24"
                android:inputType="textPassword"
                android:drawablePadding="8dp"
                android:background="@drawable/cusrtom_edittext"
                android:autofillHints="password" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/confirm_password"
                android:layout_marginTop="30dp"
                android:inputType="textPassword"
                android:padding="8dp"
                android:hint="@string/confirm_password"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:background="@drawable/cusrtom_edittext"
                android:autofillHints="password" />

            <Button
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/signup"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/cusrtom_edittext"
                android:layout_marginTop="30dp"
                android:backgroundTint="#1976D2"
                android:id="@+id/signup_button"
                android:textSize="15sp"
                />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
