<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/firstpgbg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/cusrtom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/cusrtom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/cusrtom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:importantForAutofill="no" />


            <Button
                android:id="@+id/loginButton"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/cusrtom_edittext"
                android:backgroundTint="#3F51B5"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/signupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/newuser"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="20dp" />





        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>


