<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/bg_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_services"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:layout_marginStart="87dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-80dp"
        android:rowCount="4"
        android:columnCount="2"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/top_view">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="20dp"
            app:cardElevation="12dp"
            android:layout_width="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/repair"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/fullServices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_service"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#1976D2"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_width="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="12dp"
            android:layout_height="150dp"
            android:layout_marginEnd="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/electrical"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/e_components"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_components"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#1976D2"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_width="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="12dp"
            android:layout_height="150dp"
            android:layout_marginEnd="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/engine"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/engine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/engine"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#1976D2"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_width="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginTop="12dp"
            android:layout_height="150dp"
            android:layout_marginEnd="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/oil"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:id="@+id/filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oil_filter"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#1976D2"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_width="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginTop="12dp"
            android:layout_height="150dp"
            android:layout_marginEnd="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/wheels"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/wheels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wheels"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#1976D2"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_width="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginTop="12dp"
            android:layout_height="150dp"
            android:layout_marginEnd="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/spark"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/spark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spark_plugs"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#1976D2"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>


</RelativeLayout>

